# stormaudio-isp-telnet-py

./: README.md  pyproject.toml
src/: main.py
src/stormaudio_isp_telnet/: __init__.py  constants.py  line_reader.py  telnet_client.py
