[project]
name = "stormaudio_isp_telnet"
version = "0.6.1"
authors = [
    {name = "Philip Flesher", email = "philip@fleshers.org"},
]
description = "Telnet client to interface with the Storm Audio ISP series sound processors"
readme = "README.md"
requires-python = ">=3.9"
classifiers = [
    "Natural Language :: English",
    "Operating System :: OS Independent",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3.9"
]
dependencies = [
    "telnetlib3==2.0.3",
    "async_timeout>=4.0.2"
]
